# stdash

./: pyproject.toml
src/stdash/: app.py
